Añadido en local los datos de conexion con BD. Pero no sube a repositorio

--- a/Maquinaria/Maquinaria.vbproj
+++ b/Maquinaria/Maquinaria.vbproj
@@ -78,6 +78,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="clsBaseDatos.vb" />
+    <Compile Include="datosConexion.vb" />
     <Compile Include="MainWindow.xaml.vb">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
