--- a/Maquinaria/Maquinaria.vbproj
+++ b/Maquinaria/Maquinaria.vbproj
@@ -69,6 +69,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="bldRegistroBaldosaPrincipal.xaml.vb">
+      <DependentUpon>bldRegistroBaldosaPrincipal.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="winAddRegistro.xaml.vb">
+      <DependentUpon>winAddRegistro.xaml</DependentUpon>
+    </Compile>
+    <Page Include="bldRegistroBaldosaPrincipal.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -83,6 +93,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="winAddRegistro.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Import Include="System.Threading.Tasks" />
@@ -104,6 +118,7 @@
     <Import Include="System.Windows.Navigation" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="modFormatos.vb" />
     <Compile Include="My Project\AssemblyInfo.vb">
       <SubType>Code</SubType>
     </Compile>
